chore: add test dependencies and JaCoCo